# MandelbrotFractalGeneration

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ColorMap/: ColorMap.cpp  ColorMap.h
FractalCore/: Fractal.cpp  Fractal.h
Renderer/: FractalRender.cpp  FractalRender.h
